Missing strings mostly

--- a/java/org/apache/catalina/filters/LocalStrings.properties
+++ b/java/org/apache/catalina/filters/LocalStrings.properties
@@ -16,6 +16,7 @@
 addDefaultCharset.unsupportedCharset=Specified character set [{0}] is not supported
 
 corsFilter.invalidPreflightMaxAge=Unable to parse preflightMaxAge
+corsFilter.invalidRequest=Invalid CORS request; Origin [{0}] Method [{1}] Access-Control-Request-Headers [{2}]
 corsFilter.invalidSupportsCredentials=It is not allowed to configure supportsCredentials=[true] when allowedOrigins=[*]
 corsFilter.nullRequest=HttpServletRequest object is null
 corsFilter.nullRequestType=CORSRequestType object is null
