--- a/java/org/apache/catalina/valves/rewrite/LocalStrings.properties
+++ b/java/org/apache/catalina/valves/rewrite/LocalStrings.properties
@@ -26,3 +26,8 @@ rewriteValve.invalidMapClassName=Invalid map class name [{0}]
 rewriteValve.noConfiguration=No configuration resource found [{0}]
 rewriteValve.readConfiguration=Read configuration from [/WEB-INF/{0}]
 rewriteValve.readError=Error reading configuration
+
+substitution.badType=Bad type [{0}] in substitution [{1}]
+substitution.invalid=Invalid substitution [{0}]
+substitution.missingDigit=Substitution [{0}] is missing digit or curly brace
+substitution.noMap=Map [{0}] not found in substitution [{1}]
