Missing strings mostly

--- a/java/org/apache/tomcat/websocket/LocalStrings.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings.properties
@@ -96,6 +96,7 @@ wsRemoteEndpoint.closedDuringMessage=The remainder of the message will not be se
 wsRemoteEndpoint.closedOutputStream=This method may not be called as the OutputStream has been closed
 wsRemoteEndpoint.closedWriter=This method may not be called as the Writer has been closed
 wsRemoteEndpoint.encoderDestoryFailed=Failed to destroy the encoder of type [{0}]
+wsRemoteEndpoint.encoderError=Encoding error [{0}]
 wsRemoteEndpoint.flushOnCloseFailed=Batched messages still enabled after session has been closed. Unable to flush remaining batched message.
 wsRemoteEndpoint.invalidEncoder=The specified encoder of type [{0}] could not be instantiated
 wsRemoteEndpoint.noEncoder=No encoder specified for object of class [{0}]
