--- a/java/org/apache/catalina/tribes/membership/cloud/LocalStrings.properties
+++ b/java/org/apache/catalina/tribes/membership/cloud/LocalStrings.properties
@@ -14,10 +14,16 @@
 # limitations under the License.
 
 abstractStream.CACertUndefined=CA cert file undefined
+abstractStream.connection=[{0}] opening connection: url [{1}], headers [{2}], connectTimeout [{3}], readTimeout [{4}]
 abstractStream.fileNotFound=CA cert file [{0}] not found
+abstractStream.invalidTimeout=Neither connectTimeout [{0}] nor readTimeout [{1}] can be less than 0 for URLConnection
 abstractStream.trustManagerError=Could not create trust manager for [{0}]
 
 certificateStream.clientCertError=Could not create key manager for [{0}] ([{1}])
+
+cloudMembershipProvider.add=Member [{0}] added
+cloudMembershipProvider.remove=Member [{0}] disappeared
+cloudMembershipProvider.start=Namespace [{0}] set; clustering enabled
 
 cloudMembershipService.stopFail=Unable to stop the cloud membership service, level: [{0}]
 
