Missing strings mostly

--- a/java/org/apache/catalina/session/LocalStrings.properties
+++ b/java/org/apache/catalina/session/LocalStrings.properties
@@ -22,6 +22,7 @@ dataSourceStore.commitSQLException=SQLException committing connection before clo
 dataSourceStore.loading=Loading Session [{0}] from database [{1}]
 dataSourceStore.missingDataSource=No data source available
 dataSourceStore.missingDataSourceName=No valid JNDI name was given
+dataSourceStore.noObject=No persisted data object found for session [{0}]
 dataSourceStore.removing=Removing Session [{0}] at database [{1}]
 dataSourceStore.saving=Saving Session [{0}] to database [{1}]
 dataSourceStore.wrongDataSource=Cannot open JNDI DataSource [{0}]
