Missing strings mostly

--- a/java/org/apache/tomcat/util/net/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings.properties
@@ -68,6 +68,7 @@ endpoint.err.close=Caught exception trying to close socket
 endpoint.err.duplicateAccept=Duplicate socket accept detected. This is a known Linux kernel bug. The original connection has been processed normally and the duplicate has been ignored. The client should be unaffected. Updating the OS to a version that uses kernel 5.10 or later should fix the duplicate accept bug.
 endpoint.err.handshake=Handshake failed for client connection from IP address [{0}] and port [{1}]
 endpoint.err.unexpected=Unexpected error processing socket
+endpoint.errorCreatingSSLContext=Error creating SSLContext
 endpoint.executor.fail=Executor rejected socket [{0}] for processing
 endpoint.getAttribute=[{0}] is [{1}]
 endpoint.init.bind=Socket bind failed: [{0}] [{1}]
