--- a/java/org/apache/coyote/LocalStrings.properties
+++ b/java/org/apache/coyote/LocalStrings.properties
@@ -65,6 +65,7 @@ request.nullReadListener=The listener passed to setReadListener() may not be nul
 request.readListenerSet=The non-blocking read listener has already been set
 
 response.encoding.invalid=The encoding [{0}] is not recognised by the JRE
+response.illegalConcurrentAccess=Concurrent attempts to write to the response and recycle the response were detected. This is not permitted as the response is not thread-safe. See section 2.3.3.4 of the Servlet specification.
 response.noTrailers.notSupported=A trailer fields supplier may not be set for this response. Either the underlying protocol does not support trailer fields or the protocol requires that the supplier is set before the response is committed
 response.notAsync=It is only valid to switch to non-blocking IO within async processing or HTTP upgrade processing
 response.nullWriteListener=The listener passed to setWriteListener() may not be null
