--- a/java/org/apache/tomcat/util/net/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/LocalStrings.properties
@@ -110,6 +110,7 @@ endpoint.nio.stopLatchAwaitFail=The pollers did not stop within the expected tim
 endpoint.nio.stopLatchAwaitInterrupted=This thread was interrupted while waiting for the pollers to stop
 endpoint.nio.timeoutCme=Exception during processing of timeouts. The code has been checked repeatedly and no concurrent modification has been found. If you are able to repeat this error please open a Tomcat bug and provide the steps to reproduce.
 endpoint.nio2.exclusiveExecutor=The NIO2 connector requires an exclusive executor to operate properly on shutdown
+endpoint.nio2.executorService=The NIO2 connector requires an executor service, the internal JVM threads will be used
 endpoint.noSslHostConfig=No SSLHostConfig element was found with the hostName [{0}] to match the defaultSSLHostConfigName for the connector [{1}]
 endpoint.noSslHostName=No host name was provided for the SSL host configuration
 endpoint.poll.error=Unexpected poller error
