Look up response wrappers to suspend
BZ 68634 shows the implications and behavior difference between suspend
and close for response generation.
A flag could be added to make this optional if needed. I will delay
backporting this to other branches since this is a behavior change.

--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -42,6 +42,7 @@ applicationContext.setSessionTracking.iae.ssl=The session tracking modes request
 applicationContext.setSessionTracking.ise=The session tracking modes for context [{0}] cannot be set whilst the context is running
 
 applicationDispatcher.allocateException=Allocate exception for servlet [{0}]
+applicationDispatcher.customResponse=The response class [{0}] could not be unwraped to the Catalina response class and will be closed immediately after the forward
 applicationDispatcher.deallocateException=Deallocate exception for servlet [{0}]
 applicationDispatcher.forward.ise=Cannot forward after response has been committed
 applicationDispatcher.isUnavailable=Servlet [{0}] is currently unavailable
