--- a/java/org/apache/catalina/core/LocalStrings.properties
+++ b/java/org/apache/catalina/core/LocalStrings.properties
@@ -56,7 +56,7 @@ applicationFilterConfig.jmxUnregisterFail=JMX de-registration failed for filter 
 applicationFilterConfig.preDestroy=Failed the call to preDestroy for the filter named [{0}] of type [{1}]
 applicationFilterConfig.release=Failed to destroy the filter named [{0}] of type [{1}]
 
-applicationFilterFactory.noFilterConfig=No filter configuration sound for [{0}]
+applicationFilterFactory.noFilterConfig=No filter configuration found for [{0}]
 
 applicationFilterRegistration.nullInitParam=Unable to set initialisation parameter for filter due to null name and/or value. Name [{0}], Value [{1}]
 applicationFilterRegistration.nullInitParams=Unable to set initialisation parameters for filter due to null name and/or value. Name [{0}], Value [{1}]
