The implementations for EL, Servlet, JSP and WebSocket are complete.

--- a/build.xml
+++ b/build.xml
@@ -58,13 +58,13 @@
 
   <!-- Exact spec versions (for the manifests etc.) -->
   <property name="servlet.spec.version"    value="6.1" />
-  <property name="servlet.revision"        value="-SNAPSHOT" />
+  <property name="servlet.revision"        value="" />
   <property name="jsp.spec.version"        value="4.0" />
-  <property name="jsp.revision"            value="-SNAPSHOT" />
+  <property name="jsp.revision"            value="" />
   <property name="el.spec.version"         value="6.0" />
-  <property name="el.revision"             value="-SNAPSHOT" />
+  <property name="el.revision"             value="" />
   <property name="websocket.spec.version"  value="2.2" />
-  <property name="websocket.revision"      value="-SNAPSHOT" />
+  <property name="websocket.revision"      value="" />
   <property name="jaspic.spec.version"     value="3.1" />
   <property name="jaspic.revision"         value="-SNAPSHOT" />
   <property name="annotation.spec.version" value="3.0" />
