--- a/java/org/apache/coyote/http11/LocalStrings.properties
+++ b/java/org/apache/coyote/http11/LocalStrings.properties
@@ -22,6 +22,7 @@ abstractHttp11Protocol.upgradeJmxRegistrationFail=Failed to register upgrade pro
 http11processor.fallToDebug=\n\
 \ Note: further occurrences of HTTP request parsing errors will be logged at DEBUG level.
 http11processor.header.parse=Error parsing HTTP request header
+http11processor.request.alreadyChunked=Error preparing request, transfer encoding lists chunked before [{0}]
 http11processor.request.finish=Error finishing request
 http11processor.request.inconsistentHosts=The host specified in the request line is not consistent with the host header
 http11processor.request.invalidScheme=The HTTP request contained an absolute URI with an invalid scheme
@@ -34,6 +35,8 @@ http11processor.request.noHostHeader=The HTTP/1.1 request did not provide a host
 http11processor.request.nonNumericContentLength=The request contained a content-length header with a non-numeric value
 http11processor.request.prepare=Error preparing request
 http11processor.request.process=Error processing request
+http11processor.request.unsupportedEncoding=Error preparing request, unsupported transfer encoding [{0}]
+http11processor.request.unsupportedVersion=Error preparing request, unsupported HTTP version [{0}]
 http11processor.response.finish=Error finishing response
 http11processor.response.invalidHeader=The HTTP response header [{0}] with value [{1}] has been removed from the response because it is invalid
 http11processor.sendfile.error=Error sending data using sendfile. May be caused by invalid request attributes for start/end points
