--- a/java/org/apache/tomcat/util/threads/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
+limitLatch.exceeded=Latch limit [{0}] exceeded
+
 taskQueue.notRunning=Executor not running, can't force a command into the queue
 
 taskThread.exiting=Thread exiting on purpose
