Use ERR_error_string_n in FFM code
The buffer previously used was too small.

--- a/res/openssl/openssl-tomcat.conf
+++ b/res/openssl/openssl-tomcat.conf
@@ -90,6 +90,7 @@
 
 --include-function ERR_clear_error                         # header: /usr/include/openssl/err.h
 --include-function ERR_error_string                        # header: /usr/include/openssl/err.h
+--include-function ERR_error_string_n                      # header: /usr/include/openssl/err.h
 --include-function ERR_get_error                           # header: /usr/include/openssl/err.h
 --include-function ERR_peek_last_error                     # header: /usr/include/openssl/err.h
 --include-constant ERR_REASON_MASK                         # header: /usr/include/openssl/err.h
