Sync FFM for 9.0

--- a/modules/openssl-foreign/src/main/resources/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
+++ b/modules/openssl-foreign/src/main/resources/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
@@ -33,6 +33,7 @@ engine.nullName=Null value name
 engine.nullValue=Null value
 engine.ocspParseError=Error parsing OCSP URLs
 engine.ocspRequestError=Error processing OCSP request for URL [{0}]
+engine.ocspResponse=OCSP response for URL [{0}] was [{1}]
 engine.openSSLError=OpenSSL error: [{0}] message: [{1}]
 engine.oversizedPacket=Encrypted packet is oversized
 engine.unsupportedCipher=Unsupported cipher suite: [{0}] [{1}]
@@ -57,6 +58,7 @@ openssl.errorLoadingPrivateKey=Error loading private key: [{0}]
 openssl.errorLoadingCertificateRevocationListWithError=Error loading certificate revocation [{0}] with error [{1}]
 openssl.errorPrivateKeyCheck=Private key does not match the certificate public key: [{0}]
 openssl.errorSSLCtxInit=Error initializing SSL context
+openssl.invalidSslProtocol=An invalid value [{0}] was provided for the SSLProtocol attribute
 openssl.keyManagerMissing=No key manager found
 openssl.makeConf=Creating OpenSSLConf context
 openssl.noCACerts=No CA certificates were configured
