--- a/build.xml
+++ b/build.xml
@@ -66,7 +66,7 @@
   <property name="websocket.spec.version"  value="2.2" />
   <property name="websocket.revision"      value="" />
   <property name="jaspic.spec.version"     value="3.1" />
-  <property name="jaspic.revision"         value="-SNAPSHOT" />
+  <property name="jaspic.revision"         value="" />
   <property name="annotation.spec.version" value="3.0" />
   <property name="annotation.revision"     value="" />
 
