Add the ability to set a sub-title for the Manager main page
This is intended to allow users with lots of instances to easily
distinguish them. Based on pull request #724 by Simon Arame.

--- a/webapps/manager/WEB-INF/web.xml
+++ b/webapps/manager/WEB-INF/web.xml
@@ -52,6 +52,13 @@
       <param-value>true</param-value>
     </init-param>
     -->
+    <!-- Uncomment this to set a sub-title for the manager web application main
+         page. It must be XML escaped, valid HTML.
+    <init-param>
+      <param-name>htmlSubTitle</param-name>
+      <param-value>Sub-Title</param-value>
+    </init-param>
+    -->
     <multipart-config>
       <!-- 50 MiB max -->
       <max-file-size>52428800</max-file-size>
