--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
@@ -51,6 +51,7 @@ openssl.errCheckConf=Error during OpenSSLConf check
 openssl.errMakeConf=Could not create OpenSSLConf context [{0}]
 openssl.errorAddingCertificate=Error adding certificate to chain: [{0}]
 openssl.errorConfiguringLocations=Error configuring CA certificate locations: [{0}]
+openssl.errorInit=Non fatal error initializing certificates or configuration: [{0}]
 openssl.errorLoadingCertificate=Error loading certificate: [{0}]
 openssl.errorLoadingCertificateWithError=Error loading certificate [{0}] with error [{1}]
 openssl.errorLoadingPassword=Error loading password file: [{0}]
@@ -92,6 +93,7 @@ openssllibrary.initializeFIPSFailed=Failed to enter FIPS mode
 openssllibrary.initializeFIPSSuccess=Successfully entered FIPS mode
 openssllibrary.initializedOpenSSL=OpenSSL successfully initialized using FFM [{0}]
 openssllibrary.initializingFIPS=Initializing FIPS mode...
+openssllibrary.errorSettingSSLRandomSeed=Setting random seed [{0}] caused error [{1}]
 openssllibrary.requireNotInFIPSMode=The listener is configured to require the library to already be in FIPS mode, but it was not in FIPS mode
 openssllibrary.skipFIPSInitialization=Already in FIPS mode; skipping FIPS initialization.
 openssllibrary.tooLateForFIPSMode=Cannot setFIPSMode: SSL has already been initialized
