Clear error earlier

--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings.properties
@@ -58,6 +58,7 @@ openssl.errorLoadingCertificateWithError=Error loading certificate [{0}] with er
 openssl.errorLoadingPassword=Error loading password file: [{0}]
 openssl.errorLoadingPrivateKey=Error loading private key: [{0}]
 openssl.errorPrivateKeyCheck=Private key does not match the certificate public key: [{0}]
+openssl.errorReadingPEMParameters=Failed reading PEM parameters [{0}] for certificate [{1}]
 openssl.errorSSLCtxInit=Error initializing SSL context
 openssl.invalidSslProtocol=An invalid value [{0}] was provided for the SSLProtocol attribute
 openssl.keyManagerMissing=No key manager found
