--- a/build.xml
+++ b/build.xml
@@ -108,13 +108,15 @@
   <property name="compile.release" value="8"/>
   <property name="min.java.version" value="8"/>
   <property name="build.java.version" value="17"/>
+  <property name="release.java.version" value="17"/>
+  <property name="skip.build.java.version" value="false"/>
 
   <!-- Check Java Build Version -->
   <fail message="Java version ${build.java.version} or newer is required (${java.version} is installed)">
     <condition>
       <and>
-        <not><javaversion atleast="${build.java.version}" /></not>
-        <not><isset property="skip.build.java.version"/></not>
+        <not><javaversion atleast="${build.java.version}"/></not>
+        <not><istrue value="${skip.build.java.version}"/></not>
       </and>
     </condition>
   </fail>
@@ -1879,6 +1881,9 @@
   <target name="test" description="Runs the JUnit test cases"
           depends="test-nio,test-nio2,test-apr,coverage-report,test-status" />
 
+  <target name="test-only" description="Runs the JUnit test cases, without compilation"
+          depends="test-only-nio,test-only-nio2,test-only-apr,test-status" />
+
   <target name="test-status"
           description="Analyses logs directory and reports on skipped tests, test failures and test errors">
     <fileset id="test.result.skippedtests" dir="${test.reports}" includes="*.txt">
@@ -1920,14 +1925,33 @@
               extension=".NIO" />
   </target>
 
+  <target name="test-only-nio" description="Runs the JUnit test cases or NIO without test preparations. Does not stop on errors."
+          depends="setup-jacoco,test-openssl-exists" if="${execute.test.nio}">
+    <runtests protocol="org.apache.coyote.http11.Http11Nio2Protocol"
+              extension=".NIO" />
+  </target>
+
   <target name="test-nio2" description="Runs the JUnit test cases for NIO2. Does not stop on errors."
           depends="setup-jacoco,test-compile,deploy,test-openssl-exists" if="${execute.test.nio2}">
     <runtests protocol="org.apache.coyote.http11.Http11Nio2Protocol"
               extension=".NIO2" />
   </target>
 
+  <target name="test-only-nio2" description="Runs the JUnit test cases or NIO2 without test preparations. Does not stop on errors."
+          depends="setup-jacoco,test-openssl-exists" if="${execute.test.nio2}">
+    <runtests protocol="org.apache.coyote.http11.Http11Nio2Protocol"
+          extension=".NIO2" />
+  </target>
+
   <target name="test-apr" description="Runs the JUnit test cases for APR. Does not stop on errors."
           depends="setup-jacoco,test-compile,deploy,test-apr-exists,test-openssl-exists"
+          if="${apr.exists}">
+    <runtests protocol="org.apache.coyote.http11.Http11AprProtocol"
+              extension=".APR" />
+  </target>
+
+  <target name="test-only-apr" description="Runs the JUnit test cases for APR without test preparations. Does not stop on errors."
+          depends="setup-jacoco,test-apr-exists,test-openssl-exists"
           if="${apr.exists}">
     <runtests protocol="org.apache.coyote.http11.Http11AprProtocol"
               extension=".APR" />
@@ -3924,7 +3948,7 @@ Read the Building page on the Apache Tomcat documentation site for details on ho
     </antcall>
   </target>
 
-  <target name="setup-bnd" depends="download-bnd" unless="skip.build.java.version" >
+  <target name="setup-bnd" depends="download-bnd" unless="skip.build.java.version">
     <!-- Add bnd tasks to project -->
     <path id="bnd.classpath">
       <fileset file="${bnd.jar}" />
