Add configuration source for configFile attribute
Much easier to use for testing.

--- a/java/org/apache/catalina/realm/LocalStrings.properties
+++ b/java/org/apache/catalina/realm/LocalStrings.properties
@@ -52,6 +52,7 @@ jaasRealm.authenticateSuccess=Username [{0}] successfully authenticated as Princ
 jaasRealm.beginLogin=JAASRealm login requested for username [{0}] using LoginContext for application [{1}]
 jaasRealm.checkPrincipal=Checking Principal [{0}] [{1}]
 jaasRealm.classNotFound=Class [{0}] was not found
+jaasRealm.configFileNotFound=JAAS configuration resource [{0}] was not found
 jaasRealm.credentialExpired=Username [{0}] NOT authenticated due to expired credential
 jaasRealm.failedLogin=Username [{0}] NOT authenticated due to failed login
 jaasRealm.loginContextCreated=JAAS LoginContext created for username [{0}]
